--- a/app/assets/stylesheets/cryptos.scss
+++ b/app/assets/stylesheets/cryptos.scss
@@ -12,8 +12,10 @@
     }
     
     .panel-body{
-        color: #00ff00;
-        background: black;
+        color: #004a99;
+        background: #ffffff;
         font-family: 'Kanit', sans-serif;
     }
+    
 }
+
