--- a/app/views/cryptos/index.html.erb
+++ b/app/views/cryptos/index.html.erb
@@ -26,7 +26,7 @@
         <tr>
         <% for x in @lookup_crypto %>
           <% if crypto.symbol == x["symbol"] %>
-            <td><%= link_to x["name"], crypto %></td>
+            <td><%= link_to x["name"], crypto, style: "color: #002699;" %></td>
             <td>$<%= x["price_usd"] %></td>
             <td><%= x["percent_change_1h"] %>%</td>
             <td><%= x["percent_change_24h"] %>%</td>
