--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
+<!--<div class= "ad-box">Ad</div>-->
 <div class="jumbotron" id="jumbotron-main">
-  <h1>Crypto-Central Tracker</h1>
+  <h1>Crypto-Corner Tracker</h1>
   <p>Keep up to date on coin prices and the bottom line of your current cryptocurrency investment portfolio</p>
   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 </div>
@@ -19,7 +20,9 @@
                   <div class="caption">
                     <h2><%= x["name"] %></h2>
                     <h4>$<%= x["price_usd"] %></h4>
-                    <p>Rank: <%= x["rank"] %></p>
+                    <p>1hr change <%= x["percent_change_1h"] %>%</p>
+                    <p>24h change <%= x["percent_change_24h"] %>%</p>
+                    <p>7 Day change <%= x["percent_change_7d"] %>%</p>
                   </div>
                 </div>
               </div>
@@ -40,7 +43,9 @@
                   <div class="caption">
                     <h2><%= x["name"] %></h2>
                     <h4>$<%= x["price_usd"] %></h4>
-                    <p>Rank: <%= x["rank"] %></p>
+                    <p>1hr change <%= x["percent_change_1h"] %>%</p>
+                    <p>24h change <%= x["percent_change_24h"] %>%</p>
+                    <p>7 Day change <%= x["percent_change_7d"] %>%</p>
                   </div>
                 </div>
               </div>
@@ -61,7 +66,9 @@
                   <div class="caption">
                     <h2><%= x["name"] %></h2>
                     <h4>$<%= x["price_usd"] %></h4>
-                    <p>Rank: <%= x["rank"] %></p>
+                    <p>1hr change <%= x["percent_change_1h"] %>%</p>
+                    <p>24h change <%= x["percent_change_24h"] %>%</p>
+                    <p>7 Day change <%= x["percent_change_7d"] %>%</p>
                   </div>
                 </div>
               </div>
@@ -82,7 +89,9 @@
                   <div class="caption">
                     <h2><%= x["name"] %></h2>
                     <h4>$<%= x["price_usd"] %></h4>
-                    <p>Rank: <%= x["rank"] %></p>
+                    <p>1hr change <%= x["percent_change_1h"] %>%</p>
+                    <p>24h change <%= x["percent_change_24h"] %>%</p>
+                    <p>7 Day change <%= x["percent_change_7d"] %>%</p>
                   </div>
                 </div>
               </div>
@@ -103,7 +112,9 @@
                   <div class="caption">
                     <h2><%= x["name"] %></h2>
                     <h4>$<%= x["price_usd"] %></h4>
-                    <p>Rank: <%= x["rank"] %></p>
+                    <p>1hr change <%= x["percent_change_1h"] %>%</p>
+                    <p>24h change <%= x["percent_change_24h"] %>%</p>
+                    <p>7 Day change <%= x["percent_change_7d"] %>%</p>
                   </div>
                 </div>
               </div>
@@ -124,7 +135,9 @@
                   <div class="caption">
                     <h2><%= x["name"] %></h2>
                     <h4>$<%= x["price_usd"] %></h4>
-                    <p>Rank: <%= x["rank"] %></p>
+                    <p>1hr change <%= x["percent_change_1h"] %>%</p>
+                    <p>24h change <%= x["percent_change_24h"] %>%</p>
+                    <p>7 Day change <%= x["percent_change_7d"] %>%</p>
                   </div>
                 </div>
               </div>
@@ -145,7 +158,9 @@
                   <div class="caption">
                     <h2><%= x["name"] %></h2>
                     <h4>$<%= x["price_usd"] %></h4>
-                    <p>Rank: <%= x["rank"] %></p>
+                    <p>1hr change <%= x["percent_change_1h"] %>%</p>
+                    <p>24h change <%= x["percent_change_24h"] %>%</p>
+                    <p>7 Day change <%= x["percent_change_7d"] %>%</p>
                   </div>
                 </div>
               </div>
@@ -166,7 +181,9 @@
                   <div class="caption">
                     <h2><%= x["name"] %></h2>
                     <h4>$<%= x["price_usd"] %></h4>
-                    <p>Rank: <%= x["rank"] %></p>
+                    <p>1hr change <%= x["percent_change_1h"] %>%</p>
+                    <p>24h change <%= x["percent_change_24h"] %>%</p>
+                    <p>7 Day change <%= x["percent_change_7d"] %>%</p>
                   </div>
                 </div>
               </div>
@@ -187,7 +204,9 @@
                   <div class="caption">
                     <h2><%= x["name"] %></h2>
                     <h4>$<%= x["price_usd"] %></h4>
-                    <p>Rank: <%= x["rank"] %></p>
+                    <p>1hr change <%= x["percent_change_1h"] %>%</p>
+                    <p>24h change <%= x["percent_change_24h"] %>%</p>
+                    <p>7 Day change <%= x["percent_change_7d"] %>%</p>
                   </div>
                 </div>
               </div>
@@ -208,7 +227,9 @@
                   <div class="caption">
                     <h2><%= x["name"] %></h2>
                     <h4>$<%= x["price_usd"] %></h4>
-                    <p>Rank: <%= x["rank"] %></p>
+                    <p>1hr change <%= x["percent_change_1h"] %>%</p>
+                    <p>24h change <%= x["percent_change_24h"] %>%</p>
+                    <p>7 Day change <%= x["percent_change_7d"] %>%</p>
                   </div>
                 </div>
               </div>
@@ -216,3 +237,5 @@
         <% end %>
     <% end %>
 <% end %>
+
+
