--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,6 +9,8 @@
 .jumbotron{
     background: url( 'crypto-coins.jpg' );
     background-repeat: no-repeat;
+    padding-top: 20px;
+    margin-top: 20px;
     background-size: cover;
     color: white;
     text-shadow: #000 0px 0px 1px, #000 0px 0px 1px, #000 0px 0px 1px;
