changed site name

--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Crypto-Corner", root_path, class:"navbar-brand", style: "color: #ffffff;" %>
+      <%= link_to "Easy Crypto Portfolio", root_path, class:"navbar-brand", style: "color: #ffffff;" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
