--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <!--<div class= "ad-box">Ad</div>-->
 <div class="jumbotron" id="jumbotron-main">
-  <h1>Crypto-Corner Tracker</h1>
+  <h1>Easy Crypto Portfolio</h1>
   <p>Keep up to date on coin prices and the bottom line of your current cryptocurrency investment portfolio</p>
   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 </div>
